--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="light-theme">
     <box-icon type='solid' name='sun' size='md' id='theme-switch' color='white'></box-icon>
-    <div class="app">
-        <div class="profile">
+    <div class="app bg-div">
+        <div class="profile bg-div">
             <img class="pfp" src="assets/pfp.png" alt="Profile Picture (inabakumori)">
             <span class="description">
                 <span class="name">Iriscent</span>
@@ -21,14 +21,21 @@
                 Socials: <a href="https://discord.com/users/634840669898145802">Discord</a> | <a href="https://matrix.to/#/@iriscent:matrix.org">Matrix</a>
             </span>
         </div>
-        <div class="commissions">
-            <h1>Commissions</h1>
+        <div class="commissions bg-div">
+            <span class="title">Commissions</span>
             <span style="color: lightgreen;">Opened</span>
+            <span>Accepting payments in USDT, hit me up for details.</span>
         </div>
-        <div class="projects">
+        <div class="projects bg-div">
             <span class="title">Projects</span>
-            <div class="divider"></div>
-            <h2>this gon be empty for a while i gotta be honest</h2>
+            <hr width="85%" color="white" height="2px">
+            <div class="projectlist">
+                <span></span>
+                <div class="project bg-div">
+                    <h4>I don't really have any active projects right now soo...</h4>
+                </div>
+                <span></span>
+            </div>
         </div>
     </div>
 
